--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -47,5 +47,10 @@
         android:layout_height="40dp"
         android:text="Open WebView"/>
 
+    <Button
+        android:id="@+id/btn7"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:text="Show Toast"/>
 
 </LinearLayout>
